# rust-sgx-learning

./: .gitignore  README.md  env.sh  rustfmt.toml
lesson1/: Makefile  README.md
lesson1/app/: Cargo.toml
lesson1/enclave/: Cargo.toml  Makefile
lesson1/enclave/src/: lib.rs
lesson2/: Makefile  README.md
lesson2/enclave/: Cargo.toml  Enclave.edl  Makefile
lesson2/enclave/Edger8rSyntax/: Arrays.edl  Functions.edl  Pointers.edl  Types.edl
lesson2/enclave/src/: lib.rs
lesson3/: README.md  test.sh
lesson3/app/: Cargo.toml
lesson3/app/src/: main.rs
lesson3/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile
lesson3/enclave/src/: lib.rs
lesson4/: README.md
lesson4/app/: Cargo.toml
lesson4/enclave/: Cargo.toml  Makefile
lesson4/enclave/src/: lib.rs
lesson5/app/: Cargo.toml  build.rs
lesson5/app/src/: enclave.rs  main.rs  ocall.rs
lesson5/enclave/: Cargo.toml  Enclave.edl  Makefile
lesson5/enclave/src/: attestation.rs  cert.rs  hex.rs  lib.rs  refactor.rs  utils.rs
tools/: Cargo.toml  README.md  report.json
tools/demos/client/: Cargo.toml
tools/demos/client/src/: main.rs
tools/demos/server/: Makefile  README.md
tools/demos/server/app/: build.rs
tools/demos/server/app/src/: enclave.rs  main.rs  ocall.rs
tools/demos/server/enclave/: Cargo.toml  Enclave.edl  Makefile
tools/demos/server/enclave/src/: lib.rs
tools/src/: attestation.rs  cert.rs  certificate.rs  error.rs  ias.rs  lib.rs  net.rs  refactor.rs  traits.rs  types.rs
tools/src/types/: attestation_report.rs  evidence_payload.rs  mod.rs  report_data.rs
