[package]
name = "tra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono      = "0.4.5"
# webpki      = "0.21"
# rustls      = { version = "0.19", features = ["dangerous_configuration"] }
# itertools   = "*"
# base64      = "0.9.2"
# serde       = { version = "1.0.130", features = ["derive"] }
# serde_json  = "1.0"
# num-bigint  = "*"
# bit-vec     = "*"
# hex         = "*"

rand = "0.7.3"
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", features = ["net"] }
sgx_tse = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }

# sgx dependencies
bit-vec = { version = "*", default-features = false}
httparse = { version = "1.3.2", default-features = false }
itertools = { version = "0.10", default-features = false }
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", optional = true, features = ["bit-vec", "num-bigint", "chrono"] }
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
rustls = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
log = { git = "https://github.com/mesalock-linux/log-sgx.git" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx.git" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx.git" }

[features]
default = ["sgx"]
std = []
sgx = [
    "yasna"
]
wasm = []
