[package]
name = "tra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "*", default-features = false}
httparse = { version = "1.3.2", default-features = false }
itertools = { version = "0.8", default-features = false}
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", default-features = false, features = ["derive"] }
serde_json = { git = "https://github.com/safematrix/serde-json-sgx.git", default-features = false, features = ["alloc"] }

chrono = { version = "0.4.5", optional = true }
webpki = { version = "0.21", optional = true }
rustls = { version = "0.19", features = ["dangerous_configuration"], optional = true }
base64 = { version = "0.9.2", optional = true }
num-bigint = { version = "0.2.5", optional = true }
log = { version = "0.4.14", optional = true }

sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", features = ["net"], optional = true }
sgx_tse = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", optional = true }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", optional = true }

sgx_yasna = { package = "yasna", git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"], optional = true }
sgx_chrono = { package = "chrono", git = "https://github.com/mesalock-linux/chrono-sgx", optional = true }
sgx_webpki = { package = "webpki", git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx", optional = true }
sgx_base64 = { package = "base64", git = "https://github.com/mesalock-linux/rust-base64-sgx", optional = true }
sgx_num-bigint = { package = "num-bigint", git = "https://github.com/mesalock-linux/num-bigint-sgx", optional = true }
sgx_rustls = { package = "rustls", git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx", optional = true }
sgx_webpki-roots = { package = "webpki-roots", git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx", optional = true }
sgx_log = { package = "log", git = "https://github.com/mesalock-linux/log-sgx.git", optional = true }
sgx_rand = { package = "rand", version = "0.7.3", git = "https://github.com/mesalock-linux/rand-sgx.git", optional = true }

[features]
default = ["std"]

std = [
    "chrono",
    "webpki",
    "rustls",
    "base64",
    "serde/std",
    "serde_json/std",
    "num-bigint",
    "log",
    ]

sgx = [
    "sgx_tstd",
    "sgx_tse",
    "sgx_tcrypto",
    "sgx_yasna",
    "sgx_chrono",
    "sgx_webpki",
    "sgx_base64",
    "sgx_webpki-roots",
    "sgx_rustls",
    "sgx_num-bigint",
    "sgx_log",
    "sgx_rand",
    "serde/mesalock_sgx",
    "serde_json/mesalock_sgx",
]
wasm = []
