[package]
name = "projectsample"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "projectsample" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }