[package]
name = "tlsEnclave"
version = "0.1.0"
authors = ["The Teaclave Authors"]
edition = "2018"

[lib]
name = "tlsEnclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tstd    = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3", features = ["net"] }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tse     = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_rand    = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }

[dependencies]
mio = { git = "https://github.com/mesalock-linux/mio-sgx", branch = "v0.6_sgx_1.1.3" }
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec = { version = "*", default-features = false}
httparse = { version = "1.3.2", default-features = false }
itertools = { version = "0.10", default-features = false }
rustls = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
log = { git = "https://github.com/mesalock-linux/log-sgx.git" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx.git" }