[package]
name = "ra-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webpki      = "0.21"
rustls      = { version = "0.19", features = ["dangerous_configuration"] }
tra = { package = "tra", path = "./../../" }