[package]
name = "raserver"
version = "1.0.0"
authors = ["The Teaclave Authors"]
edition = "2018"

[lib]
name = "raserver" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = ["sgx"]
sgx = [
    "tra/sgx"
]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"], rev = "v1.1.3" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }

[dependencies]
tra = { package = "tra", path = "./../../../" }