[package]
name = "raserver"
version = "1.0.0"
edition = "2018"

[lib]
name = "raserver" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = ["sgx"]
sgx = [
    "tra/sgx"
]

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"], rev = "v1.1.3" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }

rustls = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx" }
log = { git = "https://github.com/mesalock-linux/log-sgx.git" }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx.git" }
tra = { package = "tra", path = "./../../../" }
